# fast_auth_backend

./: .env.exemple  README.md  alembic.ini  docker-compose.yaml  pyproject.toml
alembic/: env.py
alembic/versions/: 0b1519da780d_create_user_model.py  ad21c6d5d5b8_create_user_sessions.py
app/: main.py  schemas.py  settings.py
app/database/: models.py  session.py  user_cruds.py
app/dependencies/: auth.py  role.py
app/middleware/: auth.py
app/routes/: routes_user.py
app/scripts/: seed_fake_users.py
app/utils/: jwt_utils.py
